Bug 275570 - system settings crashed after change custom desktop theme
Summary: system settings crashed after change custom desktop theme
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 278878 278988 279342 279903 279991 281762 282632 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-06-13 18:52 UTC by Robby Engelmann
Modified: 2011-09-24 13:48 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.1
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (5.70 KB, text/plain)
2011-08-20 22:10 UTC, Samir
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Engelmann 2011-06-13 18:52:50 UTC
Application: systemsettings (1.0)
KDE Platform Version: 4.6.80 (4.7 Beta1) "release 6"
Qt Version: 4.7.3
Operating System: Linux 2.6.37.6-0.5-default i686
Distribution: "openSUSE 11.4 (i586)"

-- Information about the crash:
- What I was doing when the application crashed:
1. start System-Settings
2. go to Workspace Appearance and Behaviour - Desktop Theme
3. set up a custom desktop theme with elements from various themes
4. apply
5. repeat steps 1 to 2
6. modify one theme item to a different theme

-->crash

ps. I use plasma-active and kusc repos from opensuse upon a wetab

The crash can be reproduced every time.

-- Backtrace:
Application: Systemeinstellungen (systemsettings), signal: Segmentation fault
[KCrash Handler]
#7  0xb766e360 in KImageCache::insertPixmap (this=0x0, key=..., pixmap=...) at /usr/src/debug/kdelibs-4.6.80/kdeui/util/kimagecache.cpp:113
#8  0xb1719c50 in Plasma::ThemePrivate::scheduledCacheUpdate (this=0x84beb08) at /usr/src/debug/kdelibs-4.6.80/plasma/theme.cpp:319
#9  0xb171d41a in Plasma::Theme::qt_metacall (this=0x84bf420, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0xbfcf8a2c) at /usr/src/debug/kdelibs-4.6.80/build/plasma/theme.moc:122
#10 0xb64b807d in QMetaObject::metacall (object=0x84bf420, cl=QMetaObject::InvokeMetaMethod, idx=10, argv=0xbfcf8a2c) at kernel/qmetaobject.cpp:237
#11 0xb64c74cc in QMetaObject::activate (sender=0x84c6928, m=0xb65ec5a4, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3278
#12 0xb65176a5 in QTimer::timeout (this=0x84c6928) at .moc/release-shared/moc_qtimer.cpp:134
#13 0xb64ce856 in QTimer::timerEvent (this=0x84c6928, e=0xbfcf8f6c) at kernel/qtimer.cpp:271
#14 0xb64c6c04 in QObject::event (this=0x84c6928, e=0xbfcf8f6c) at kernel/qobject.cpp:1181
#15 0xb6a88684 in QApplicationPrivate::notify_helper (this=0x808c680, receiver=0x84c6928, e=0xbfcf8f6c) at kernel/qapplication.cpp:4462
#16 0xb6a91427 in QApplication::notify (this=0xbfcf92bc, receiver=0x84c6928, e=0xbfcf8f6c) at kernel/qapplication.cpp:3862
#17 0xb75f6b81 in KApplication::notify (this=0xbfcf92bc, receiver=0x84c6928, event=0xbfcf8f6c) at /usr/src/debug/kdelibs-4.6.80/kdeui/kernel/kapplication.cpp:311
#18 0xb64b178e in QCoreApplication::notifyInternal (this=0xbfcf92bc, receiver=0x84c6928, event=0xbfcf8f6c) at kernel/qcoreapplication.cpp:731
#19 0xb64e2b89 in sendEvent (this=0x8084d9c) at kernel/qcoreapplication.h:215
#20 QTimerInfoList::activateTimers (this=0x8084d9c) at kernel/qeventdispatcher_unix.cpp:619
#21 0xb64df852 in timerSourceDispatch (source=0x8084d68) at kernel/qeventdispatcher_glib.cpp:184
#22 0xb5b9c509 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#23 0xb5b9cd10 in ?? () from /lib/libglib-2.0.so.0
#24 0xb5b9cfce in g_main_context_iteration () from /lib/libglib-2.0.so.0
#25 0xb64dff7b in QEventDispatcherGlib::processEvents (this=0x807e278, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#26 0xb6b3f1da in QGuiEventDispatcherGlib::processEvents (this=0x807e278, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#27 0xb64b0a6d in QEventLoop::processEvents (this=0xbfcf9214, flags=...) at kernel/qeventloop.cpp:149
#28 0xb64b0c99 in QEventLoop::exec (this=0xbfcf9214, flags=...) at kernel/qeventloop.cpp:201
#29 0xb64b5740 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#30 0xb6a863d4 in QApplication::exec () at kernel/qapplication.cpp:3736
#31 0x080578ce in _start ()

Possible duplicates by query: bug 263580, bug 259505, bug 257433, bug 257246, bug 256421.

Reported using DrKonqi
Comment 1 Christoph Feck 2011-06-13 20:30:33 UTC
Should stop the saveTimer before deleting the pixmapCache, or ignore null pixmapCache in scheduledCacheUpdate().
Comment 2 Christoph Feck 2011-07-30 18:36:08 UTC
*** Bug 278878 has been marked as a duplicate of this bug. ***
Comment 3 Christoph Feck 2011-07-30 19:17:37 UTC
Git commit f5b095fdaaae164ef04dd46dfb4fb97a8aa87768 by Christoph Feck.
Committed on 30/07/2011 at 21:18.
Pushed by cfeck into branch 'KDE/4.7'.

Fix accessing pixmapCache after it is deleted

BUG: 275570
FIXED-IN: 4.7.1

M  +6    -4    plasma/theme.cpp

http://commits.kde.org/kdelibs/f5b095fdaaae164ef04dd46dfb4fb97a8aa87768
Comment 4 Christoph Feck 2011-07-30 19:20:48 UTC
Git commit d2c18b73ac78f643e51500c0aa64b73416a38664 by Christoph Feck.
Committed on 30/07/2011 at 21:18.
Pushed by cfeck into branch 'master'.

Fix accessing pixmapCache after it is deleted

BUG: 275570
FIXED-IN: 4.7.1
(cherry picked from commit f5b095fdaaae164ef04dd46dfb4fb97a8aa87768)

M  +6    -4    plasma/theme.cpp

http://commits.kde.org/kdelibs/d2c18b73ac78f643e51500c0aa64b73416a38664
Comment 5 Christoph Feck 2011-08-01 12:08:37 UTC
*** Bug 278988 has been marked as a duplicate of this bug. ***
Comment 6 Christoph Feck 2011-08-04 02:38:51 UTC
*** Bug 279342 has been marked as a duplicate of this bug. ***
Comment 7 Christoph Feck 2011-08-11 23:56:56 UTC
*** Bug 279903 has been marked as a duplicate of this bug. ***
Comment 8 Christoph Feck 2011-08-13 01:52:20 UTC
*** Bug 279991 has been marked as a duplicate of this bug. ***
Comment 9 Samir 2011-08-20 22:10:08 UTC
Created attachment 63017 [details]
New crash information added by DrKonqi

systemsettings (1.0) on KDE Platform 4.7.00 (4.7.0) using Qt 4.7.2

- What I was doing when the application crashed:

fisrt time
   i start System Preferences
   i open workspace appearance
   i selected desktop theme in the left side bar
   i selected details tab
   i changed color scheme to 'air for netbooks color scheme'
   when i choosed apply the system preferences crashed 

second time
   i start System Preferences
   i open workspace appearance
   i selected desktop theme in the left side bar
   i selected details tab
   i changed color scheme to 'oxygen color scheme'
   when i choosed apply the system preferences crashed

third time
   i start System Preferences
   i open workspace appearance
   i selected desktop theme in the left side bar
   i selected details tab
   i changed color scheme to 'application dashboard color scheme'
   when i choosed apply the system preferences crashed

-- Backtrace (Reduced):
#7  0x0035a6aa in KImageCache::insertPixmap (this=0x0, key=..., pixmap=...) at ../../kdeui/util/kimagecache.cpp:113
#8  0x02775137 in Plasma::ThemePrivate::scheduledCacheUpdate (this=0x95f2508) at ../../plasma/theme.cpp:316
#9  0x02778904 in Plasma::Theme::qt_metacall (this=0x95e74a0, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0xbfc6580c) at ./theme.moc:122
[...]
#12 0x00b022f7 in QTimer::timeout (this=0x95eda98) at .moc/release-shared/moc_qtimer.cpp:134
#13 0x00abb3ee in QTimer::timerEvent (this=0x95eda98, e=0xbfc65d2c) at kernel/qtimer.cpp:271
Comment 10 Christoph Feck 2011-09-10 18:10:19 UTC
*** Bug 281762 has been marked as a duplicate of this bug. ***
Comment 11 Christoph Feck 2011-09-24 13:48:09 UTC
*** Bug 282632 has been marked as a duplicate of this bug. ***