Fix accessing pixmapCache after it is deleted

BUG: 275570
FIXED-IN: 4.7.1
(cherry picked from commit f5b095fdaaae164ef04dd46dfb4fb97a8aa87768)