theme.cpp
@@ -310,10 +310,12 @@ void ThemePrivate::discardCache(CacheTypes caches)
 
 void ThemePrivate::scheduledCacheUpdate()
 {
-    QHashIterator<QString, QPixmap> it(pixmapsToCache);
-    while (it.hasNext()) {
-        it.next();
-        pixmapCache->insertPixmap(idsToCache[it.key()], it.value());
+    if (useCache()) {
+        QHashIterator<QString, QPixmap> it(pixmapsToCache);
+        while (it.hasNext()) {
+            it.next();
+            pixmapCache->insertPixmap(idsToCache[it.key()], it.value());
+        }
     }
 
     pixmapsToCache.clear();
